<resources>
    <string name="app_name">GOTO Lockers</string>
    <!-- Content Discription Strings -->
    <string name="logo">GOTO Lockers Logo</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="prompt_username">Username / Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_remember_me">Remember Me</string>
    <string name="action_forgot_password"><u>Forgot Password?</u></string>
    <string name="action_register"><u>Create Account</u></string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_locker_locations">Map</string>

    <!-- Strings related to register -->
    <string name="register">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Email">Email</string>
    <string name="ID">Student ID</string>
    <string name="error_invalid_id">This student ID is invalid</string>

    <!-- Strings related to locker info -->
    <string name="locker_num">Locker @ %1$s</string>
    <string name="container_num">Container #%1$d</string>
    <string-array name="container_type">
        <item>Container Type: Normal</item>
        <item>Container Type: Large</item>
    </string-array>

    <!-- Strings related to reservation -->
    <string name="reservation_title">Reservation</string>
    <string name="start_time">Start time: </string>
    <string name="end_time">End time:\ \ </string>
    <string name="time_hint">Select time</string>
    <string name="date_hint">Select date</string>
    <string name="time">%01$s:%02$s</string>

    <!-- Strings related to controlling locker -->
    <string name="locker_control">Locker Control</string>
    <string name="locked_image">Locker Locked</string>
    <string name="locked_message">Tap to unlock</string>
    <string name="unlocked_message">Close locker to lock</string>
    <string name="container_num_col">Container #%1$d: </string>
    <string name="control_status">\ %1$s</string>

</resources>
