<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center|start"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".LockerReservation">

    <TextView
        android:id="@+id/contNumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:paddingTop="30dp"
        android:paddingBottom="5dp"
        android:text="@string/container_num"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/contTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:paddingTop="0dp"
        android:paddingBottom="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rubik"
            android:paddingTop="0dp"
            android:paddingEnd="15dp"
            android:paddingBottom="0dp"
            android:text="@string/start_time"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/startDateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:focusable="false"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:hint="@string/date_hint"
            android:inputType="datetime"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/startTimeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:focusable="false"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:hint="@string/time_hint"
            android:inputType="datetime"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:typeface="normal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/endTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/rubik"
            android:paddingEnd="15dp"
            android:text="@string/end_time"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/endDateET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:focusable="false"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:hint="@string/date_hint"
            android:inputType="datetime"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/endTimeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:focusable="false"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:hint="@string/time_hint"
            android:inputType="datetime"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:typeface="normal" />
    </LinearLayout>

</LinearLayout>