<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme.NoActionBar"
    android:background="@color/colorPrimaryDark"
    tools:context=".Register">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                android:paddingBottom="30dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/firstNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=".AUTOFILL_HINT_NAME"
                    android:fontFamily="@font/rubik"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:nextFocusForward="@id/lastNameEdit"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/AppTheme"
                    android:typeface="normal"
                    tools:targetApi="o"></EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lastNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=".AUTOFILL_HINT_NAME"
                    android:fontFamily="@font/rubik"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:nextFocusForward="@id/emailEdit"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:typeface="normal"
                    tools:targetApi="o"></EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
                    android:fontFamily="@font/rubik"
                    android:hint="@string/Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusForward="@id/idEdit"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:typeface="normal"
                    tools:targetApi="o"></EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/idEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:hint="@string/ID"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/AppTheme"
                    android:typeface="normal"
                    tools:targetApi="o"></EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/cancelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/transparent_bg_bordered_button"
                        android:fontFamily="@font/rubik"
                        android:text="@android:string/no"
                        android:textAllCaps="false"
                        android:textColor="@color/colorLight"
                        android:typeface="normal" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"></View>

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/transparent_bg_bordered_button"
                        android:fontFamily="@font/rubik"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorLight"
                        android:textSize="14sp"
                        android:theme="@style/MyButton"
                        android:typeface="normal" />
                </LinearLayout>



            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

</ScrollView>